# mpolidori.github.io

./: .gitignore  CNAME  Makefile  README.md  archives.html  authors.html  categories.html  index.html  index2.html  index3.html  index4.html  index5.html  index6.html  index7.html  index8.html  index9.html  my-super-post.html  pelicanconf.py  publishconf.py  pyproject.toml  tags.html  test-1.html  test-2.html  test-3.html  test-4.html  test-789.html  test-789hgjkhg.html  test-789hgjkhgvhbv.html  test.html  wip.html
author/: alexis-metaireau.html  conan-doyle.html  michael-polidori.html  michael-polidori2.html  michael-polidori3.html  michael-polidori4.html  michael-polidori5.html  michael-polidori6.html  michael-polidori7.html  michael-polidori8.html  michael-polidori9.html
category/: misc.html  misc2.html  misc3.html  misc4.html  misc5.html  misc6.html  misc7.html  misc8.html  misc9.html  python.html
content/: entry-1.md  entry-2.md  entry-3.md  entry-4.md  entry-5.md  entry-6.md  entry-7.md  entry-jhgjh.md  entry-jhgjhjkol.md
custom-theme/templates/: article.html  base.html  index.html
feeds/: all.atom.xml  misc.atom.xml
output/: CNAME  archives.html  authors.html  categories.html  index.html  tags.html  test.html  wip.html
output/author/: michael-polidori.html
output/category/: misc.html
output/feeds/: all.atom.xml  misc.atom.xml
pages/: my-super-post.html
theme/css/: main.css
