[tool.poetry]
name = "mpolidori.github.io"
version = "0.1.0"
description = ""
authors = ["Michael Polidori <spatiumestabsolutum@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pelican = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
